--- a/HaRepacker/Properties/Resources.zh-CHS.resx
+++ b/HaRepacker/Properties/Resources.zh-CHS.resx
@@ -169,62 +169,14 @@
   <data name="FHSettingsYValue" xml:space="preserve">
     <value>Y值</value>
   </data>
-  <data name="ImagesFilter" xml:space="preserve">
-    <value>图片 (*.jpg;*.bmp;*.png;*.gif;*.tiff)</value>
-  </data>
   <data name="InteractionWzMapleVersionInfo" xml:space="preserve">
     <value>Select the WZ encryption used:</value>
   </data>
   <data name="InteractionWzMapleVersionTitle" xml:space="preserve">
     <value>WZ Encryption</value>
   </data>
-  <data name="MainAddCanvas" xml:space="preserve">
-    <value>新增图片</value>
-  </data>
-  <data name="MainAddConvex" xml:space="preserve">
-    <value>新增convex</value>
-  </data>
-  <data name="MainAddDir" xml:space="preserve">
-    <value>新增目录</value>
-  </data>
-  <data name="MainAddDouble" xml:space="preserve">
-    <value>新增双精度浮点数</value>
-  </data>
-  <data name="MainAddFloat" xml:space="preserve">
-    <value>新增浮点数</value>
-  </data>
-  <data name="MainAddImg" xml:space="preserve">
-    <value>新增IMG</value>
-  </data>
-  <data name="MainAddInt" xml:space="preserve">
-    <value>新增整數</value>
-  </data>
-  <data name="MainAddLink" xml:space="preserve">
-    <value>新增连接路径</value>
-  </data>
-  <data name="MainAddNull" xml:space="preserve">
-    <value>新增空值</value>
-  </data>
-  <data name="MainAddShort" xml:space="preserve">
-    <value>新增无符号短整数</value>
-  </data>
-  <data name="MainAddSound" xml:space="preserve">
-    <value>新增音乐</value>
-  </data>
-  <data name="MainAddString" xml:space="preserve">
-    <value>新增文本</value>
-  </data>
-  <data name="MainAddSub" xml:space="preserve">
-    <value>新增子目录</value>
-  </data>
-  <data name="MainAddVec" xml:space="preserve">
-    <value>新增坐标</value>
-  </data>
   <data name="MainAnimationFail" xml:space="preserve">
     <value>这个项目不是动画</value>
-  </data>
-  <data name="MainCannotInsertToNode" xml:space="preserve">
-    <value>无法插入这个类型到选中的wz节点</value>
   </data>
   <data name="MainConfirmAbort" xml:space="preserve">
     <value>你确定你想终止当前操作?</value>
@@ -270,9 +222,6 @@
   <data name="MainWzExportError" xml:space="preserve">
     <value>导出目录未找到。 请在工具 - &gt;选项下指定它</value>
   </data>
-  <data name="Mp3Filter" xml:space="preserve">
-    <value>MPEG-1 Audio Layer 3 (*.mp3)</value>
-  </data>
   <data name="OptionsIndentError" xml:space="preserve">
     <value>缩进必须大于或等于0</value>
   </data>
@@ -286,10 +235,10 @@
     <value>选择默认XML文件夹</value>
   </data>
   <data name="SelectImage" xml:space="preserve">
-    <value>选择图片</value>
+    <value>選擇圖片</value>
   </data>
   <data name="SelectMp3" xml:space="preserve">
-    <value>选择MP3文件</value>
+    <value>選擇MP3文件</value>
   </data>
   <data name="SelectOutApng" xml:space="preserve">
     <value>选择动画路径</value>
