--- a/HaRepackerLib/Properties/Resources.zh-CHT.resx
+++ b/HaRepackerLib/Properties/Resources.zh-CHT.resx
@@ -129,53 +129,8 @@
   <data name="Error" xml:space="preserve">
     <value>錯誤</value>
   </data>
-  <data name="ImagesFilter" xml:space="preserve">
-    <value>Images (*.jpg;*.bmp;*.png;*.gif;*.tiff)</value>
-  </data>
-  <data name="MainAddCanvas" xml:space="preserve">
-    <value>Add canvas</value>
-  </data>
-  <data name="MainAddConvex" xml:space="preserve">
-    <value>Add convex</value>
-  </data>
-  <data name="MainAddDir" xml:space="preserve">
-    <value>Add directory</value>
-  </data>
-  <data name="MainAddDouble" xml:space="preserve">
-    <value>Add double</value>
-  </data>
-  <data name="MainAddFloat" xml:space="preserve">
-    <value>Add float</value>
-  </data>
-  <data name="MainAddImg" xml:space="preserve">
-    <value>Add image</value>
-  </data>
-  <data name="MainAddInt" xml:space="preserve">
-    <value>Add int</value>
-  </data>
-  <data name="MainAddLink" xml:space="preserve">
-    <value>Add link</value>
-  </data>
-  <data name="MainAddNull" xml:space="preserve">
-    <value>Add null</value>
-  </data>
-  <data name="MainAddShort" xml:space="preserve">
-    <value>Add short</value>
-  </data>
-  <data name="MainAddSound" xml:space="preserve">
-    <value>Add sound</value>
-  </data>
-  <data name="MainAddString" xml:space="preserve">
-    <value>Add string</value>
-  </data>
-  <data name="MainAddSub" xml:space="preserve">
-    <value>Add sub</value>
-  </data>
-  <data name="MainAddVec" xml:space="preserve">
-    <value>Add vector</value>
-  </data>
   <data name="MainCannotInsertToNode" xml:space="preserve">
-    <value>Cannot insert selected object into this type of wz node.</value>
+    <value>無法插入這個類型到選中的wz節點</value>
   </data>
   <data name="MainConfirmCopy" xml:space="preserve">
     <value>要將WZ節點複製到剪切板嗎? (警告 - 如果選擇的節點較多會花比較多時間)</value>
@@ -207,16 +162,55 @@
   <data name="ReplaceConfirm" xml:space="preserve">
     <value>節點"{0}"已存在, 你想取代它嗎?</value>
   </data>
-  <data name="SelectImage" xml:space="preserve">
-    <value>Select the image</value>
-  </data>
   <data name="SelectionType" xml:space="preserve">
     <value>選中類型: {0}</value>
   </data>
-  <data name="SelectMp3" xml:space="preserve">
-    <value>Select MP3 File</value>
-  </data>
   <data name="Warning" xml:space="preserve">
     <value>警告</value>
+  </data>
+  <data name="MainAddCanvas" xml:space="preserve">
+    <value>新增圖片</value>
+  </data>
+  <data name="MainAddConvex" xml:space="preserve">
+    <value>新增convex</value>
+  </data>
+  <data name="MainAddDir" xml:space="preserve">
+    <value>新增目錄</value>
+  </data>
+  <data name="MainAddDouble" xml:space="preserve">
+    <value>新增雙精度浮點數</value>
+  </data>
+  <data name="MainAddFloat" xml:space="preserve">
+    <value>新增浮點數</value>
+  </data>
+  <data name="MainAddImg" xml:space="preserve">
+    <value>新增IMG</value>
+  </data>
+  <data name="MainAddInt" xml:space="preserve">
+    <value>新增整數</value>
+  </data>
+  <data name="MainAddLink" xml:space="preserve">
+    <value>新增連結路徑</value>
+  </data>
+  <data name="MainAddNull" xml:space="preserve">
+    <value>新增空值</value>
+  </data>
+  <data name="MainAddShort" xml:space="preserve">
+    <value>新增無符號短整數</value>
+  </data>
+  <data name="MainAddSound" xml:space="preserve">
+    <value>新增音樂</value>
+  </data>
+  <data name="MainAddString" xml:space="preserve">
+    <value>新增文本</value>
+  </data>
+  <data name="MainAddSub" xml:space="preserve">
+    <value>新增子目錄</value>
+  </data>
+  <data name="MainAddVec" xml:space="preserve">
+    <value>新增坐標</value>
+  </data>
+  <data name="ImagesFilter" xml:space="preserve">
+    <value>圖片 (*.jpg;*.bmp;*.png;*.gif;*.tiff)</value>
   </data>
 </root>
