--- a/HaRepackerLib/Properties/Resources.resx
+++ b/HaRepackerLib/Properties/Resources.resx
@@ -250,4 +250,7 @@
   <data name="SelectMp3" xml:space="preserve">
     <value>Select MP3 File</value>
   </data>
+  <data name="MainAdditionalInfo_PortalType" xml:space="preserve">
+    <value>Portal Type: {0}</value>
+  </data>
 </root>
