--- a/HaRepackerLib/Properties/Resources.zh-CHS.resx
+++ b/HaRepackerLib/Properties/Resources.zh-CHS.resx
@@ -222,4 +222,7 @@
   <data name="SelectMp3" xml:space="preserve">
     <value>选择MP3文件</value>
   </data>
+  <data name="MainAdditionalInfo_PortalType" xml:space="preserve">
+    <value>门户类型：{0}</value>
+  </data>
 </root>
