--- a/HaRepackerLib/Controls/HaRepackerMainPanels/HaRepackerMainPanel.resx
+++ b/HaRepackerLib/Controls/HaRepackerMainPanels/HaRepackerMainPanel.resx
@@ -128,6 +128,9 @@
   <data name="DataTree.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Left, Right</value>
   </data>
+  <data name="DataTree.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
+  </data>
   <data name="DataTree.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
@@ -137,7 +140,7 @@
   <data name="DataTree.SelectedNodes" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAEAQAAABxTeXN0ZW0uQ29sbGVjdGlvbnMuQXJyYXlMaXN0AwAAAAZfaXRl
-        bXMFX3NpemUIX3ZlcnNpb24FAAAICAkCAAAAAAAAABEAAAAQAgAAAAAAAAAL
+        bXMFX3NpemUIX3ZlcnNpb24FAAAICAkCAAAAAAAAABsAAAAQAgAAAAAAAAAL
 </value>
   </data>
   <data name="DataTree.Size" type="System.Drawing.Size, System.Drawing">
@@ -159,6 +162,9 @@
   <data name="&gt;&gt;DataTree.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="MainSplitContainer.Panel1.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
+  </data>
   <data name="&gt;&gt;MainSplitContainer.Panel1.Name" xml:space="preserve">
     <value>MainSplitContainer.Panel1</value>
   </data>
@@ -171,11 +177,50 @@
   <data name="&gt;&gt;MainSplitContainer.Panel1.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="vectorPanel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>None</value>
+  </data>
+  <data name="vectorPanel.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
+  </data>
+  <data name="vectorPanel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>19, 20</value>
+  </data>
+  <data name="vectorPanel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 0, 0</value>
+  </data>
+  <data name="vectorPanel.MinimumSize" type="System.Drawing.Size, System.Drawing">
+    <value>300, 120</value>
+  </data>
+  <data name="vectorPanel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>300, 120</value>
+  </data>
+  <data name="vectorPanel.TabIndex" type="System.Int32, mscorlib">
+    <value>14</value>
+  </data>
+  <data name="vectorPanel.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="&gt;&gt;vectorPanel.Name" xml:space="preserve">
+    <value>vectorPanel</value>
+  </data>
+  <data name="&gt;&gt;vectorPanel.Type" xml:space="preserve">
+    <value>HaRepackerLib.XYPanel, HaRepackerLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;vectorPanel.Parent" xml:space="preserve">
+    <value>MainSplitContainer.Panel2</value>
+  </data>
+  <data name="&gt;&gt;vectorPanel.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="saveSoundButton.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
+  </data>
   <data name="saveSoundButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="saveSoundButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>68, 274</value>
+    <value>96, 386</value>
   </data>
   <data name="saveSoundButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
@@ -202,13 +247,16 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;saveSoundButton.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
+  </data>
+  <data name="saveImageButton.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
   </data>
   <data name="saveImageButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="saveImageButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>26, 335</value>
+    <value>279, 447</value>
   </data>
   <data name="saveImageButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
@@ -235,13 +283,16 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;saveImageButton.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
+  </data>
+  <data name="changeSoundButton.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
   </data>
   <data name="changeSoundButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="changeSoundButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>106, 369</value>
+    <value>464, 447</value>
   </data>
   <data name="changeSoundButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
@@ -268,13 +319,16 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;changeSoundButton.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
+  </data>
+  <data name="changeImageButton.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
   </data>
   <data name="changeImageButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="changeImageButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>106, 212</value>
+    <value>96, 324</value>
   </data>
   <data name="changeImageButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
@@ -301,13 +355,16 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;changeImageButton.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
+  </data>
+  <data name="applyChangesButton.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
   </data>
   <data name="applyChangesButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="applyChangesButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 414</value>
+    <value>96, 447</value>
   </data>
   <data name="applyChangesButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
@@ -334,7 +391,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;applyChangesButton.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="nameBox.Location" type="System.Drawing.Point, System.Drawing">
     <value>26, 98</value>
@@ -358,39 +415,6 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;nameBox.ZOrder" xml:space="preserve">
-    <value>5</value>
-  </data>
-  <data name="vectorPanel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>106, 140</value>
-  </data>
-  <data name="vectorPanel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>6, 8, 6, 8</value>
-  </data>
-  <data name="vectorPanel.MaximumSize" type="System.Drawing.Size, System.Drawing">
-    <value>135, 82</value>
-  </data>
-  <data name="vectorPanel.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>135, 82</value>
-  </data>
-  <data name="vectorPanel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>135, 82</value>
-  </data>
-  <data name="vectorPanel.TabIndex" type="System.Int32, mscorlib">
-    <value>6</value>
-  </data>
-  <data name="vectorPanel.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="&gt;&gt;vectorPanel.Name" xml:space="preserve">
-    <value>vectorPanel</value>
-  </data>
-  <data name="&gt;&gt;vectorPanel.Type" xml:space="preserve">
-    <value>HaRepackerLib.XYPanel, HaRepackerLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;vectorPanel.Parent" xml:space="preserve">
-    <value>MainSplitContainer.Panel2</value>
-  </data>
-  <data name="&gt;&gt;vectorPanel.ZOrder" xml:space="preserve">
     <value>6</value>
   </data>
   <data name="mp3Player.Location" type="System.Drawing.Point, System.Drawing">
@@ -426,8 +450,11 @@
   <data name="&gt;&gt;mp3Player.ZOrder" xml:space="preserve">
     <value>7</value>
   </data>
+  <data name="textPropBox.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
+  </data>
   <data name="textPropBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>68, 231</value>
+    <value>26, 125</value>
   </data>
   <data name="textPropBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
@@ -538,10 +565,13 @@
     <value>0, 0, 0, 10</value>
   </data>
   <data name="listView_fieldLimitType.Size" type="System.Drawing.Size, System.Drawing">
-    <value>647, 428</value>
+    <value>637, 428</value>
   </data>
   <data name="listView_fieldLimitType.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
+  </data>
+  <data name="listView_fieldLimitType.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
   </data>
   <data name="&gt;&gt;listView_fieldLimitType.Name" xml:space="preserve">
     <value>listView_fieldLimitType</value>
